fix Contact page flicker bug and minor styling issues

--- a/sass/components/_intro.scss
+++ b/sass/components/_intro.scss
@@ -1,4 +1,5 @@
 #profilePic {
-  width: 100%;
-  border-radius: 4px;
+  width: 500px;
+  border-radius: 50%;
+  border: 1px grey solid;
 }
